# bitcoin-tidy

./: .clang-tidy  CMakeLists.txt  accessor-rewrite.cpp  accessor-rewrite.h  main.cpp  observers-base.cpp  observers-base.h  observers.cpp  observers.h  outpoint-assignment.cpp  outpoint-assignment.h  outpoint-observers.cpp  outpoint-observers.h  run.sh  tx-deref.cpp  tx-deref.h
